--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,90 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alkalami&display=swap');
-
-*,
-*:before,
-*:after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    place-items: center;
-    background-image: url("../img/zero.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    margin: 0;
-    height: 100vh;
-    background-color: #080710;
-    background-color: #080710;
-}
-
-#wrapper {
-    justify-content: center;
-    margin: 2.35rem 0 0;
-    display: flex;
-    justify-content: center;
-
-}
-
-#welcome {
-    margin: 0;
-    background-color: rgb(0, 0, 0);
-}
-
-#welcome>h1 {
-    text-align: center;
-    font-family: 'Passions Conflict', cursive;
-    font-size: 5rem;
-    letter-spacing: 0.1rem;
-    background: linear-gradient(180deg, rgba(165, 195, 250, 1) 17%, rgba(188, 205, 221, 1) 48%, rgba(206, 215, 200, 1) 57%, rgba(246, 236, 153, 1) 69%, rgba(232, 183, 105, 1) 78%);
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-}
-
-.home-container {
-    margin: 0px auto 4px 0;
-    height: 1rem;
-    display: flex;
-    top: 0%;
-    left: 50%;
-    text-align: center;
-}
-
-.info {
-    justify-items: legacy;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    flex: 1;
-    margin-top: 10rem;
-
-}
-
-.info>h1 {
-    font-size: 2rem;
-    margin: -10.3rem 0 0px;
-    position: relative;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 0;
-    letter-spacing: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(242, 238, 213);
-}
-
-.site-content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-
 .background {
     width: 430px;
     height: 415px;
@@ -145,6 +58,24 @@ form h3 {
     text-align: center;
 }
 
+label {
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+input {
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
 
 ::placeholder {
     color: #e5e5e5;
@@ -166,24 +97,56 @@ button:hover {
     box-shadow: 1px 1px 11px 8px #e7a83a;
 }
 
-
-
 .site-content {
     height: 70%;
 }
 
+.buttons {
+    display: flex;
+}
 
-.thank-you {
+.buttons button {
+    margin: 20px;
+}
+
+.offers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 77%;
+}
+
+.offer-card {
     display: flex;
     align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 9px;
+    cursor: pointer;
+    background: transparent;
+    box-shadow: 1px 1px 5px 3px white;
+}
+
+.offer-card:nth-child(3) img {
+    margin-right: 38px;
+}
+
+.offer-card:hover {
+    box-shadow: 1px 1px 18px 3px white;
+}
+
+.offer-card img {
+    max-width: 90px;
+    margin-right: 20px;
+}
+
+.confirm-reservation {
+    height: 80%;
+    display: flex;
     flex-direction: column;
-    justify-content: space-around;
-}
-
-.hidden {
-    display: none;
-}
-
-.selected-room{
-    background-color: #cfcbca;
+    align-items: flex-start;
+    align-content: flex-end;
+    justify-content: center;
 }
